# C4W-Dataset-Preprocess

./: .gitignore  Makefile  README.md  pyproject.toml
OSRM/: README.md  run.sh
address_normalizer/: README.md  cli.py  processor.py
address_normalizer/extraction/: base.py  city.py  context.py  pipeline.py  state.py  street_name.py  street_number.py  suffix.py  unit.py  zipcode.py
dataset_extractor/: README.md  cli.py  dataset_catalog.py  download_server.py  index.html
dataset_geocoder/: README.md  cli.py  geocoder.py  zipcoder.py
notebooks/: geo_tiger.ipynb  hud_data.ipynb  osrm-nominatim.ipynb  us_zipcode.ipynb
