[project]
name = "business-growth-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.2",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "usaddress>=0.5.16",
    "censusgeocode",
    "shapely",
    "pyproj",
    "geopy>=2.4.1",
    "rtree>=1.2.0",
    "tqdm>=4.67.0",
    "beautifulsoup4>=4.12.0",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-requests>=2.32.4.20260107",
]

# -----------------------------
# Ruff (linting + import sorting)
# -----------------------------
[tool.ruff]
line-length = 88
target-version = "py313"
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # warnings
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line length (handled by ruff format)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


# -----------------------------
# Mypy (typing)
# -----------------------------
[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
pretty = true

[dependency-groups]
dev = [
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]
